// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bucket is public 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_wingapp_mybucket_ResourceGroup_5BB8D6AD\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"my_bucket-c8c86ad5\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_wingapp_mybucket_StorageAccount_8E24ADA1\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_wingapp_mybucket_ResourceGroup_5BB8D6AD.location}\\",
        \\"name\\": \\"mybucketc8c86ad5\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_wingapp_mybucket_ResourceGroup_5BB8D6AD.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_wingapp_mybucket_Bucket_22A05B87\\": {
        \\"container_access_type\\": \\"public\\",
        \\"name\\": \\"my-bucket-c8c86ad5\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_wingapp_mybucket_StorageAccount_8E24ADA1.name}\\"
      }
    }
  }
}"
`;

exports[`bucket is public 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "root/backend",
          },
          "wing-app": Object {
            "children": Object {
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/wing-app/WingLogger",
              },
              "azure": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.1",
                },
                "id": "azure",
                "path": "root/wing-app/azure",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.1",
                    },
                    "id": "Bucket",
                    "path": "root/wing-app/my_bucket/Bucket",
                  },
                  "ResourceGroup": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                      "version": "5.0.1",
                    },
                    "id": "ResourceGroup",
                    "path": "root/wing-app/my_bucket/ResourceGroup",
                  },
                  "StorageAccount": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                      "version": "5.0.1",
                    },
                    "id": "StorageAccount",
                    "path": "root/wing-app/my_bucket/StorageAccount",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/wing-app/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "root/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket name valid 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_wingapp_TheUncannyBucket_ResourceGroup_741D4C00\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"The-Uncanny-Bucket-c8b6c5e5\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_wingapp_TheUncannyBucket_StorageAccount_3E0C508B\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_wingapp_TheUncannyBucket_ResourceGroup_741D4C00.location}\\",
        \\"name\\": \\"theuncannybucketc8b6c5e5\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_wingapp_TheUncannyBucket_ResourceGroup_741D4C00.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_wingapp_TheUncannyBucket_6DA9B6A8\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"the-uncanny-bucket-c8b6c5e5\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_wingapp_TheUncannyBucket_StorageAccount_3E0C508B.name}\\"
      }
    }
  }
}"
`;

exports[`bucket name valid 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "root/backend",
          },
          "wing-app": Object {
            "children": Object {
              "The-Uncanny-Bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.1",
                    },
                    "id": "Bucket",
                    "path": "root/wing-app/The-Uncanny-Bucket/Bucket",
                  },
                  "ResourceGroup": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                      "version": "5.0.1",
                    },
                    "id": "ResourceGroup",
                    "path": "root/wing-app/The-Uncanny-Bucket/ResourceGroup",
                  },
                  "StorageAccount": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                      "version": "5.0.1",
                    },
                    "id": "StorageAccount",
                    "path": "root/wing-app/The-Uncanny-Bucket/StorageAccount",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "The-Uncanny-Bucket",
                "path": "root/wing-app/The-Uncanny-Bucket",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/wing-app/WingLogger",
              },
              "azure": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.1",
                },
                "id": "azure",
                "path": "root/wing-app/azure",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "root/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_wingapp_mybucket_ResourceGroup_5BB8D6AD\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"my_bucket-c8c86ad5\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_wingapp_mybucket_StorageAccount_8E24ADA1\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_wingapp_mybucket_ResourceGroup_5BB8D6AD.location}\\",
        \\"name\\": \\"mybucketc8c86ad5\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_wingapp_mybucket_ResourceGroup_5BB8D6AD.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_wingapp_mybucket_Bucket_22A05B87\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"my-bucket-c8c86ad5\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_wingapp_mybucket_StorageAccount_8E24ADA1.name}\\"
      }
    }
  }
}"
`;

exports[`create a bucket 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "root/backend",
          },
          "wing-app": Object {
            "children": Object {
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/wing-app/WingLogger",
              },
              "azure": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.1",
                },
                "id": "azure",
                "path": "root/wing-app/azure",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.1",
                    },
                    "id": "Bucket",
                    "path": "root/wing-app/my_bucket/Bucket",
                  },
                  "ResourceGroup": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                      "version": "5.0.1",
                    },
                    "id": "ResourceGroup",
                    "path": "root/wing-app/my_bucket/ResourceGroup",
                  },
                  "StorageAccount": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                      "version": "5.0.1",
                    },
                    "id": "StorageAccount",
                    "path": "root/wing-app/my_bucket/StorageAccount",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/wing-app/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "root/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
